# IPMMotorSim

./: README.md
.github/workflows/: Build.yml
IPMMotorSim/: CMakeLists.txt  actualmainwindow.cpp  actualmainwindow.h  chart.cpp  chart.h  chartview.cpp  chartview.h  cpp_teststubs.cpp  datagraph.cpp  datagraph.h  graph.cpp  graph.h  idiqgraph.cpp  idiqgraph.h  main.cpp  mainwindow.cpp  mainwindow.h  motormodel.cpp  motormodel.h  param_prj.h  terminal.h  terminal_stubs.cpp  teststubs.c
IPMMotorSim/cmake/: StaticChecks.cmake
